--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "@serverless/enterprise-plugin": "^1.2.0",
     "archiver": "^1.3.0",
     "async": "^1.5.2",
-    "aws-sdk": "^2.490.0",
+    "aws-sdk": "2.524.0",
     "bluebird": "^3.5.5",
     "cachedir": "^2.2.0",
     "chalk": "^2.4.2",
